Override Bootstrap palette in child-theme variables

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,12 @@ Thumbs.db
 # SASS #
 ##########
 .sass-cache
+
+
+# ignore all rebuild artifacts under src/sass
+wp-content/themes/understrap-child/src/sass/assets/
+wp-content/themes/understrap-child/src/sass/*.css
+wp-content/themes/understrap-child/src/sass/*.map
+
+# if your build spits out a src/sass/child-theme.css etc
+wp-content/themes/understrap-child/src/sass/
