--- a/wp-content/themes/understrap-child/package.json
+++ b/wp-content/themes/understrap-child/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bs": "browser-sync start --config src/build/browser-sync.config.js",
-    "css": "npm-run-all css-compile css-postcss css-minify",
+    "css": "sass  --load-path=./node_modules  --load-path=src/sass  --style=expanded  --source-map  --embed-sources  --no-error-css  --quiet  src/sass/child-theme.scss:css/child-theme.css  src/sass/custom-editor-style.scss:css/custom-editor-style.css",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --quiet src/sass/child-theme.scss:css/child-theme.css src/sass/custom-editor-style.scss:css/custom-editor-style.css",
     "css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output css/ --batch --batch-suffix \".min\" \"css/*.css\" \"!css/*.min.css\" \"!css/*rtl*.css\"",
     "css-postcss": "postcss --config src/build/postcss.config.js --replace \"css/*.css\" \"!css/*.rtl*.css\" \"!css/*.min.css\"",
