--- a/wp-content/themes/understrap-child/package.json
+++ b/wp-content/themes/understrap-child/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bs": "browser-sync start --config src/build/browser-sync.config.js",
-    "css": "sass --load-path=./node_modules --load-path=src/sass --style=expanded --source-map --embed-sources --no-error-css --quiet src/sass/child-theme.scss:build/assets/css/app.css src/sass/custom-editor-style.scss:build/assets/css/custom-editor-style.css",
+    "css": "sass --load-path=./node_modules --load-path=src/sass --quiet-deps src/sass/app.scss build/assets/css/app.css --no-source-map && postcss build/assets/css/app.css --replace",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --quiet src/sass/child-theme.scss:css/child-theme.css src/sass/custom-editor-style.scss:css/custom-editor-style.css",
     "css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output css/ --batch --batch-suffix \".min\" \"css/*.css\" \"!css/*.min.css\" \"!css/*rtl*.css\"",
     "css-postcss": "postcss --config src/build/postcss.config.js --replace \"css/*.css\" \"!css/*.rtl*.css\" \"!css/*.min.css\"",
@@ -41,7 +41,6 @@
     "url": "https://github.com/understrap/understrap-child/issues"
   },
   "homepage": "https://understrap.com",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
@@ -62,6 +61,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0",
+    "postcss-preset-env": "^10.1.6",
     "postcss-understrap-palette-generator": "git+https://github.com/understrap/postcss-understrap-palette-generator.git",
     "rollup": "^3.2.5",
     "sass": "^1.56.0",
