added home page patterns: featured-events, mission-statement, why-get-involved #6

--- a/wp-content/themes/understrap-child/package.json
+++ b/wp-content/themes/understrap-child/package.json
@@ -4,7 +4,6 @@
   "description": "Basic Child Theme for Understrap Theme Framework: https://github.com/understrap/understrap",
   "main": "index.js",
   "scripts": {
-    "bs": "browser-sync start --config src/build/browser-sync.config.js",
     "precss": "rimraf build/assets/css/app.css",
     "css": "sass --quiet --load-path=./node_modules --load-path=src/sass src/sass/app.scss build/assets/css/app.css --no-source-map",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --quiet src/sass/child-theme.scss:css/child-theme.css src/sass/custom-editor-style.scss:css/custom-editor-style.css",
@@ -16,6 +15,8 @@
     "watch": "npm-run-all --parallel watch-run-*",
     "watch:css": "sass --watch --load-path=./node_modules --load-path=src/sass src/sass/app.scss:build/assets/css/app.css",
     "watch-run-css": "nodemon --watch src/sass/ --ext scss --exec \"npm-run-all css\"",
+    "watch:scss": "sass --watch      --load-path=src/sass      --load-path=src/sass/assets      src/sass:assets/css      --style=expanded",
+    "bs": "browser-sync start --proxy 'cs50b-full-import.local' --port 3000 --ui-port 3001 --files 'assets/css/*.css, **/*.php'",
     "watch-run-js": "nodemon --watch src/js/ --ext js --exec \"npm-run-all js\"",
     "copy-assets": "node src/build/copy-assets.js",
     "dist": "npm-run-all --parallel css js",
@@ -54,7 +55,7 @@
     "@rollup/plugin-replace": "^5.0.1",
     "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.2",
-    "browser-sync": "^2.27.10",
+    "browser-sync": "^2.29.3",
     "browserslist": "^4.21.4",
     "caniuse-lite": "^1.0.30001430",
     "clean-css-cli": "^5.6.1",
